--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "D Xie"
   avatar           : "profile.png"
-  bio              : "Work work work"
+  bio              : "work! work? work..."
   location         : "Earth"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
